memleketim.html düzeltme

--- a/memleketim.html
+++ b/memleketim.html
@@ -34,7 +34,7 @@
                 <a class="nav-link active" aria-current="page" href="anasayfa.html">Anasayfa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ozgecmisim.hmtl">Özgeçmişim</a>
+                <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="memleketim.html">Memleketim</a>
@@ -130,7 +130,7 @@
 </section>
 <!-- k.maraş hakkında bitiş-->
 <!-- galeri başlangıç-->
-<section class="p-5 text-center galeri"> 
+<section class="p-5 text-center "> 
   <div class="container">
     <h2 class="mb-5 font-weight-bold">Galeri</h2>
     <hr class="ayraç"><i class="fas fa-ice-cream ibeyaz"></i>          
