Web site son durum
img dosyası yüklendi. Son değişiklikler yapıldı. Ödev paylaşıldı.

--- a/index.html
+++ b/index.html
@@ -64,54 +64,66 @@
   <!-- menü bitiş-->
   <!-- fotoğraf ve hakkımda başlangıç-->
   <div>
-    <img src="img/kapalıçarşı1.jpg" class="d-block w-100 resimslider" alt="...">
+    <img src="img/ybfl.jpg" class="d-block w-100 resimslider" alt="...">
   </div>
   <section class="p-5 text-center hakkımda">
     <div class="container">
-      <h2 class="mb-5 font-weight-bold">Kahramanmaraş Kapalıçarşı</h2>
+      <h2 class="mb-5 font-weight-bold">Hakkımda</h2>
       <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-      <p>İl merkezinde bulunan kapalı çarşının XVI. yüzyılın sonlarında inşa edildiği sanılmaktadır. Kapalı çarşı,
-        bedesten ile bakırcılar çarşısı arasına kuzey-güney doğrultusunda yerleştirilmiştir.
-        Biri bedestene ait olmak üzere 8 giriş açıklığına sahiptir. Osmanlı kapalı çarşılarının en erken örneklerinden
-        biri olup ortasındaki dua kubbesi ile dikkat çekmektedir. Günümüzde içeride 98, doğu ve güney cephelerde de 18
-        adet olmak üzere 116 dükkân mevcuttur.
-        Kapalı çarşı etrafında yer alan diğer tarihi çarşılardan olan Bakırcılar çarşısı, semerciler çarşısı, saraçlar
-        çarşısı, belediye çarşısı, mazmanlar çarşısı, kazzazlar çarşısı, demirciler çarşısı, Alacacılar çarşısı ile
-        birlikte geçmişten günümüze yörenin ticari hayatına şekil vererek günümüze kadar gelmiştir.</p>
+      <p>Merhabalar benim adım Mehmet. 19 yaşındayım. Aslen Kahramanmaraşlıyım fakat İstanbul'da doğup büyüdüm.
+        İlkokulumu <a target=”_blank” href=https://tepeilkokulu.meb.k12.tr>Tepe İlkokulu</a>nda okudum. Ortaokulumu <a
+          target=”_blank” href=https://guvercintepeortaokulu.meb.k12.tr>Güvercintepe Ortaokulu</a>nda okudum.
+        Ardından TEOG sınavı ile birlikte <a target=”_blank” href=https://yucelborufenlisesi.meb.k12.tr>Yücel Boru Fen
+          Lisesi</a>ni kazandım.
+        4 sene yurtta kalıp liseyi bitirdikten sonra <a target=”_blank” href=https://www.sakarya.edu.tr>Sakarya
+          Üniversitesi</a> bilgisayar mühendisliğini kazanıp buralara kadar geldik.</p>
+      <p>Benim hayatım genelde sıradan sakin bir hayattı. Lise ile birlikte evden de ayrılmamın etkisiyle daha sosyal
+        olmaya başladım fakat koronavirüs ile birlikte herkesde olduğu gibi benim de sosyal hayat yok denecek kadar
+        azaldı. Umarım yakın zamanda salgın bittiğinde eskisi gibi gezip dolaşabileceğim. Şimdilik evde kalmaya devam.
+        Şimdi ve şimdiye kadar yaptıklarımdan bahsedecek olursak; normalde bigisayarlarla çok uğraşan birisi değilidim
+        fakat bilgisayar mühendisliğini kazanmam ile birlikte artık bilgisayara daha fazla vakit ayırıyorum ve yaz
+        ayında kendimi daha çok geliştirmek istiyorum.
+        Şimdiye kadar üniversitede olarak c++, c#, html, JavaScript, php, css gibi programlama dilleri ve yardımcı
+        dillere çalıştım. Ayrıca üniversite dışında kurslara katılarak python ve sibergüvenlik dersleri aldım (Henüz çok
+        iyi olmasam da). Gelecek planlarım arasında inşallah kazanırsam erasmus programı ile yurt dışında okumak,
+        gidebildiğim kadar ülke gezmek ve serbest olarak çalışabileceğim bir iş bulup hayatımı yaşamak var. Tabi ki bu
+        iş yurtdışında olursa çok daha güzel olur. Ayrıca aklımda yapmak istediğim birkaç uygulama da var fakat henüz
+        kodlamada o kadar iyi olmadığım için daha fazla deneyim kazandıktan sonra umarım onları da yapabilirim. Şimdilik
+        aklımdakiler bu kadar bir daha ki web site yapımında görüşmek üzere..</p>
     </div>
   </section>
   <!-- fotoğraf ve hakkımda bitiş-->
   <!-- galeri başlangıç-->
-  <section class="p-5 text-center ">
+  <section class="p-5 text-center">
     <div class="container">
       <h2 class="mb-5 font-weight-bold">Galeri</h2>
       <hr class="ayraç"><i class="fas fa-ice-cream ibeyaz"></i>
       <div class="row">
         <div class="col-md-3">
           <figure class="figure">
-            <a href="img/kapalıçarşı2.jpg">
-              <img src="img/kapalıçarşı2.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            <a href="img/ybfl.jpg">
+              <img src="img/ybfl.jpg" class="figure-img img-fluid rounded shadow" alt="...">
             </a>
           </figure>
         </div>
         <div class="col-md-3">
           <figure class="figure">
-            <a href="img/kapalıçarşı.jpg">
-              <img src="img/kapalıçarşı.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            <a href="img/sakaryaüniversitesi.jpg">
+              <img src="img/sakaryaüniversitesi.jpg" class="figure-img img-fluid rounded shadow" alt="...">
             </a>
           </figure>
         </div>
         <div class="col-md-3">
           <figure class="figure">
-            <a href="img/kapalıçarşı3.jpg">
-              <img src="img/kapalıçarşı3.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            <a href="img/yücelborufenlisesi.jpg">
+              <img src="img/yücelborufenlisesi.jpg" class="figure-img img-fluid rounded shadow" alt="...">
             </a>
           </figure>
         </div>
         <div class="col-md-3">
           <figure class="figure">
-            <a href="img/kapalıçarşı4.jpg">
-              <img src="img/kapalıçarşı4.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            <a href="img/voleybol.jpg">
+              <img src="img/voleybol.jpg" class="figure-img img-fluid rounded shadow" alt="...">
             </a>
           </figure>
         </div>
