--- a/iletisimmesaj.html
+++ b/iletisimmesaj.html
@@ -1,149 +1,154 @@
 <!doctype html>
 <html lang="tr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Css -->
-	  <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <!-- ikon font-->
-    <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
+  <!-- Css -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <!-- ikon font-->
+  <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
 
-    <tittle></tittle>
-  </head>
-  <body>
-    <!-- menü başlangıç -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="anasayfa.html">Anasayfa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="memleketim.html">Memleketim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="takımımız.html">Takımımız</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
-              </li>
-              <li class="nav-item">
-                <a href="iletisim.html" class="nav-link">İletişim</a>
-              </li>
-              <li class="nav-item">
-                <a href="login.php" class="nav-link active  text-white">
-                    <i class="fas fa-sign-in-alt"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- menü bitiş-->
-      <!--iletişim başlangıç-->
-      <section class="p-5 text-center hakkımda">
-        <div class="container">
-          <h2 class="mb-5 font-weight-bold">Başarılı!!!</h2>
-          <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-          <div class="row">
-				<script type="text/javascript">
-					function getParameterByName(name, url) 
-					{
-		            	if (!url) url = window.location.href;
-    		       		name = name.replace(/[\[\]]/g, '\\$&');
-        		    	var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-            		    	results = regex.exec(url);
-           				if (!results) return null;
-           				if (!results[2]) return '';
-           				return decodeURIComponent(results[2].replace(/\+/g, ' '));
-        			}
-  				    var firstname = getParameterByName('firstname');
-                    var lastname = getParameterByName('lastname');
-  				    var email = getParameterByName('email');
-                    var gender = getParameterByName('gender');
-  				    var message = getParameterByName('message');
-				</script>
-				<table class="table">
-						<thead class="table-dark text-center">
-							<tr>
-								<td colspan="2">Mesajınızı Başarılı Bir Şekilde Gönderdiniz.</td>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>İsminiz</td>
-								<td>
-									<script>document.write(firstname);
-									</script>
-								</td>
-							</tr>
-                            <tr>
-								<td>Soyisminiz</td>
-								<td>
-									<script>document.write(lastname);
-									</script>
-								</td>
-							</tr>
-							<tr>
-								<td>E-Mail</td>
-								<td>
-									<script>document.write(email);
-									</script>
-								</td>
-							</tr>
-                            <tr>
-								<td>Cinsiyetiniz</td>
-								<td>
-									<script>document.write(gender);
-									</script>
-								</td>
-							</tr>
-							<tr>
-								<td>Mesajınız</td>
-								<td>
-                                    <script >document.write(message);
-                                    </script>
-								</td>
-							</tr>
-						</tbody>				
-				</table>	
-			</div>
-            <br>
-            <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-        </div>
-      </section>  
-      <!--iletişim bitiş-->
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 
-      <!-- Optional JavaScript; choose one of the two! -->
+  <tittle></tittle>
+</head>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <scrip src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></scrip>
+<body>
+  <!-- menü başlangıç -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end bg-dark" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="memleketim.html">Memleketim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="takımımız.html">Takımımız</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
+          </li>
+          <li class="nav-item">
+            <a href="iletisim.html" class="nav-link">İletişim</a>
+          </li>
+          <li class="nav-item">
+            <a href="login.php" class="nav-link active  text-white">
+              <i class="fas fa-sign-in-alt"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- menü bitiş-->
+  <!--iletişim başlangıç-->
+  <section class="p-5 text-center hakkımda">
+    <div class="container">
+      <h1 class="mb-5 font-weight-bold">Başarılı!!!</h1>
+      <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
+      <div class="row">
+        <script type="text/javascript">
+          function getParameterByName(name, url) {
+            if (!url) url = window.location.href;
+            name = name.replace(/[\[\]]/g, '\\$&');
+            var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+              results = regex.exec(url);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, ' '));
+          }
+          var firstname = getParameterByName('firstname');
+          var lastname = getParameterByName('lastname');
+          var email = getParameterByName('email');
+          var gender = getParameterByName('gender');
+          var message = getParameterByName('message');
+        </script>
+        <table class="table">
+          <thead class="table-dark text-center">
+            <tr>
+              <td colspan="2">Mesajınızı Başarılı Bir Şekilde Gönderdiniz.</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>İsminiz</td>
+              <td>
+                <script>document.write(firstname);
+                </script>
+              </td>
+            </tr>
+            <tr>
+              <td>Soyisminiz</td>
+              <td>
+                <script>document.write(lastname);
+                </script>
+              </td>
+            </tr>
+            <tr>
+              <td>E-Mail</td>
+              <td>
+                <script>document.write(email);
+                </script>
+              </td>
+            </tr>
+            <tr>
+              <td>Cinsiyetiniz</td>
+              <td>
+                <script>document.write(gender);
+                </script>
+              </td>
+            </tr>
+            <tr>
+              <td>Mesajınız</td>
+              <td>
+                <script>document.write(message);
+                </script>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
+    </div>
+  </section>
+  <!--iletişim bitiş-->
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <scrip src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></scrip>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <scrip src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></scrip>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
-    <footer class="py-4 bg-dark text-white text-center">
-      Web-Teknolojileri-Projesi © Mehmet Arı 2021
-    </footer>
-  </body>
+  <footer class="py-4 bg-dark text-white text-center">
+    Web-Teknolojileri-Projesi © Mehmet Arı 2021
+  </footer>
+</body>
+
 </html>
