--- a/ilgialanlarim.html
+++ b/ilgialanlarim.html
@@ -32,10 +32,10 @@
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse justify-content-end bg-dark" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="anasayfa.html">Anasayfa</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
