--- a/maraskale.html
+++ b/maraskale.html
@@ -1,129 +1,144 @@
 <!doctype html>
 <html lang="tr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Css -->
-	  <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <!-- ikon font-->
-    <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
+  <!-- Css -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <!-- ikon font-->
+  <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
 
-    <tittle></tittle>
-  </head>
-  <body>
-    <!-- menü başlangıç -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="anasayfa.html">Anasayfa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="memleketim.html">Memleketim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="takımımız.html">Takımımız</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
-              </li>
-              <li class="nav-item">
-                <a href="iletisim.html" class="nav-link">İletişim</a>
-              </li>
-              <li class="nav-item">
-                <a href="login.php" class="nav-link active  text-white">
-                    <i class="fas fa-sign-in-alt"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- menü bitiş-->
-      <!-- fotoğraf ve hakkımda başlangıç-->
-      <div >
-        <img src="img/maraşkale4.jpg" class="d-block w-100 resimslider" alt="...">
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+
+  <tittle></tittle>
+</head>
+
+<body>
+  <!-- menü başlangıç -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end bg-dark" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="memleketim.html">Memleketim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="takımımız.html">Takımımız</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
+          </li>
+          <li class="nav-item">
+            <a href="iletisim.html" class="nav-link">İletişim</a>
+          </li>
+          <li class="nav-item">
+            <a href="login.php" class="nav-link active  text-white">
+              <i class="fas fa-sign-in-alt"></i>
+            </a>
+          </li>
+        </ul>
       </div>
-      <section class="p-5 text-center hakkımda">
-         <div class="container">
-            <h2 class="mb-5 font-weight-bold">Kahramanmaraş Kalesi</h2>
-            <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-            <p>Kahramanmaraş Kalesi, Kahramanmaraş kent merkezindeki yığma tepenin üstündedir. Günümüze değin birçok onarım geçiren kalenin MÖ 1. yüzyıl ile MS 2. yüzyıl arasında yapılmış olacağı düşünülmektedir. 150x75 metre boyutlarında dikdörtgene yakın planlıdır.
-                 Eski Eserler ve Müzeler Genel Müdürlüğü duvarların bir bölümünü ve üç burcu onartmıştır. Bunlardan biri kalenin eski giriş yapısıdır. Kare planlı burcun dış duvarları kesme taş, iç duvarları ise moloz taştır.
-                  Yarıdan çoğu yıkılmış iç duvarlarda iç kapı koridoru ile kapı söve yerleri onarılmıştır. Burcun güney yüzünde sivri kemerli, çiftkanatlı kapı yer alır. Ahşap kapı kanatları, kalın saç kaplanarak iri başlı çivilerle perçinlenmiştir.
-                   Burcun doğusu mazgal deliklidir. İçten haç planlı burç, haçın uzun kolu üstündeki başka bir kapıyla kaleye açılır. Kale surlarının içi park olarak düzenlenmiştir. Açık çay bahçeleri, çocuk parkı ve dinlenme mekanları bulunmaktadır.
-                    Girişin sol tarafında ise dev bir Atatürk şekli vardır ve geceleri üzerinde ışıklar yanar ve bunu tüm şehir görür. Ayrıca içinde oyun parkı vardır. Yoların kenarlarında ise şehrin eski resimleri bulunmaktadır.</p>
-         </div>
-      </section>
-      <!-- fotoğraf ve hakkımda bitiş-->
-      <!-- galeri başlangıç-->
-      <section class="p-5 text-center "> 
-          <div class="container">
-            <h2 class="mb-5 font-weight-bold">Galeri</h2>
-            <hr class="ayraç"><i class="fas fa-ice-cream ibeyaz"></i>          
-            <div class="row">
-                <div class="col-md-3">
-                    <figure class="figure">
-                        <a href="img/maraşkale1.jpg">
-                        <img src="img/maraşkale1.jpg" class="figure-img img-fluid rounded shadow" alt="...">
-                        </a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="figure">
-                        <a href="img/maraşkale2.jpg">
-                        <img src="img/maraşkale2.jpg" class="figure-img img-fluid rounded shadow" alt="...">
-                        </a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="figure">
-                        <a href="img/maraşkale3.jpg">
-                        <img src="img/maraşkale3.jpg" class="figure-img img-fluid rounded shadow" alt="...">
-                        </a>
-                    </figure>
-                </div>
-                <div class="col-md-3">
-                    <figure class="figure">
-                        <a href="img/maraşkale.jpg">
-                        <img src="img/maraşkale.jpg" class="figure-img img-fluid rounded shadow" alt="...">
-                        </a>
-                    </figure>
-                </div>
-            </div>
-          </div>
-      </section>
-      <!-- galeri bitiş-->
-    <!-- Optional JavaScript; choose one of the two! -->
+    </div>
+  </nav>
+  <!-- menü bitiş-->
+  <!-- fotoğraf ve hakkımda başlangıç-->
+  <div>
+    <img src="img/maraşkale4.jpg" class="d-block w-100 resimslider" alt="...">
+  </div>
+  <section class="p-5 text-center hakkımda">
+    <div class="container">
+      <h2 class="mb-5 font-weight-bold">Kahramanmaraş Kalesi</h2>
+      <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
+      <p>Kahramanmaraş Kalesi, Kahramanmaraş kent merkezindeki yığma tepenin üstündedir. Günümüze değin birçok onarım
+        geçiren kalenin MÖ 1. yüzyıl ile MS 2. yüzyıl arasında yapılmış olacağı düşünülmektedir. 150x75 metre
+        boyutlarında dikdörtgene yakın planlıdır.
+        Eski Eserler ve Müzeler Genel Müdürlüğü duvarların bir bölümünü ve üç burcu onartmıştır. Bunlardan biri kalenin
+        eski giriş yapısıdır. Kare planlı burcun dış duvarları kesme taş, iç duvarları ise moloz taştır.
+        Yarıdan çoğu yıkılmış iç duvarlarda iç kapı koridoru ile kapı söve yerleri onarılmıştır. Burcun güney yüzünde
+        sivri kemerli, çiftkanatlı kapı yer alır. Ahşap kapı kanatları, kalın saç kaplanarak iri başlı çivilerle
+        perçinlenmiştir.
+        Burcun doğusu mazgal deliklidir. İçten haç planlı burç, haçın uzun kolu üstündeki başka bir kapıyla kaleye
+        açılır. Kale surlarının içi park olarak düzenlenmiştir. Açık çay bahçeleri, çocuk parkı ve dinlenme mekanları
+        bulunmaktadır.
+        Girişin sol tarafında ise dev bir Atatürk şekli vardır ve geceleri üzerinde ışıklar yanar ve bunu tüm şehir
+        görür. Ayrıca içinde oyun parkı vardır. Yoların kenarlarında ise şehrin eski resimleri bulunmaktadır.</p>
+    </div>
+  </section>
+  <!-- fotoğraf ve hakkımda bitiş-->
+  <!-- galeri başlangıç-->
+  <section class="p-5 text-center ">
+    <div class="container">
+      <h2 class="mb-5 font-weight-bold">Galeri</h2>
+      <hr class="ayraç"><i class="fas fa-ice-cream ibeyaz"></i>
+      <div class="row">
+        <div class="col-md-3">
+          <figure class="figure">
+            <a href="img/maraşkale1.jpg">
+              <img src="img/maraşkale1.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3">
+          <figure class="figure">
+            <a href="img/maraşkale2.jpg">
+              <img src="img/maraşkale2.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3">
+          <figure class="figure">
+            <a href="img/maraşkale3.jpg">
+              <img src="img/maraşkale3.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3">
+          <figure class="figure">
+            <a href="img/maraşkale.jpg">
+              <img src="img/maraşkale.jpg" class="figure-img img-fluid rounded shadow" alt="...">
+            </a>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- galeri bitiş-->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
-    <footer class="py-4 bg-dark text-white text-center">
-      Web-Teknolojileri-Projesi © Mehmet Arı 2021
-    </footer>
-  </body>
+  <footer class="py-4 bg-dark text-white text-center">
+    Web-Teknolojileri-Projesi © Mehmet Arı 2021
+  </footer>
+</body>
+
 </html>
