--- a/ozgecmisim.html
+++ b/ozgecmisim.html
@@ -1,156 +1,163 @@
 <!doctype html>
 <html lang="tr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Css -->
-	  <link rel="stylesheet" href="style.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <!-- ikon font-->
-    <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
+  <!-- Css -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+  <!-- ikon font-->
+  <script src="https://kit.fontawesome.com/026b5b3e74.js" crossorigin="anonymous"></script>
 
-    <tittle></tittle>
-  </head>
-  <body>
-    <!-- menü başlangıç -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="anasayfa.html">Anasayfa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="memleketim.html">Memleketim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="takımımız.html">Takımımız</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
-              </li>
-              <li class="nav-item">
-                <a href="iletisim.html" class="nav-link">İletişim</a>
-              </li>
-              <li class="nav-item">
-                <a href="login.php" class="nav-link active  text-white">
-                    <i class="fas fa-sign-in-alt"></i>
-                </a>
-              </li>
-            </ul>
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+
+  <tittle></tittle>
+</head>
+
+<body>
+  <!-- menü başlangıç -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Web Teknolojileri Projesi</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end bg-dark" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ozgecmisim.html">Özgeçmişim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="memleketim.html">Memleketim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="takımımız.html">Takımımız</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
+          </li>
+          <li class="nav-item">
+            <a href="iletisim.html" class="nav-link">İletişim</a>
+          </li>
+          <li class="nav-item">
+            <a href="login.php" class="nav-link active  text-white">
+              <i class="fas fa-sign-in-alt"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- menü bitiş-->
+  <!-- özgeçmişim başlangıç-->
+  <section class="p-5 text-center hakkımda">
+    <div class="container">
+      <h2 class="mb-5 font-weight-bold">Özgeçmişim</h2>
+      <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
+      <div class="row">
+        <div class="card my-3 ">
+          <div class="card-body">
+            <h3 class="card-title">Mehmet Arı</h3>
+            <p class="card-text">B201210086</p>
+            <p class="card-text">mehmet.ari4@ogr.sakarya.edu.tr</p>
+            <p class="card-text">Sakarya Üniversitesi Bilgisayar Mühendisliği</p>
           </div>
         </div>
-      </nav>
-      <!-- menü bitiş-->
-      <!-- özgeçmişim başlangıç-->
-       <section class="p-5 text-center hakkımda">
-         <div class="container">
-            <h2 class="mb-5 font-weight-bold">Özgeçmişim</h2>
-            <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-            <div class="row">
-				<div class="card my-3 ">		
-					<div class="card-body">
-						<h3 class="card-title">Mehmet Arı</h3>
-						<p class="card-text">B201210086</p>
-						<p class="card-text">mehmet.ari4@ogr.sakarya.edu.tr</p>
-                        <p class="card-text">Sakarya Üniversitesi Bilgisayar Mühendisliği</p>
-					</div>
-                </div>
-            </div>
-            <hr class="ayraç">
-            <table class="table beyaz">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Becerilerim</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>C++, Orta Seviye</td>
-                    </tr>
-                    <tr>
-                        <td>C#, Orta Seviye</td>
-                    </tr>
-                    <tr>
-                        <td>Python, Başlangıç Seviyesi</td>
-                    </tr>
-                    <tr>
-                        <td>Web Programlama Dilleri (html,php,css,javascript), Orta Seviye</td>
-                    </tr>
-                    <tr>
-                        <td>Siber Güvenlik, Başlangış Seviyesi</td>
-                    </tr>
-                </tbody>
-            </table>
-            <hr class="ayraç">
-            <table class="table beyaz">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Eğitim Durumu</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Tepe İlkokulu</td>
-                    </tr>
-                    <tr>
-                        <td>Güvercintepe Ortaokulu</td>
-                    </tr>
-                    <tr>
-                        <td>Yücel Boru Fen Lisesi</td>
-                    </tr>     
-                    <tr>
-                        <td>Sakarya Üniversitesi, Bilgisayar Mühendisliği, 1. Sınıf</td>
-                    </tr>      
-                </tbody>
-            </table>
-            <hr class="ayraç">
-            <table class="table beyaz">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Yabancı Diller</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>İngilizce, Orta-Üst Seviye</td>
-                    </tr>   
-                </tbody>
-            </table>
-            <br>
-            <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
-         </div>
-       </section>
-      <!-- özgeçmişim bitiş-->
+      </div>
+      <hr class="ayraç">
+      <table class="table beyaz">
+        <thead class="table-dark">
+          <tr>
+            <th>Becerilerim</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>C++, Orta Seviye</td>
+          </tr>
+          <tr>
+            <td>C#, Orta Seviye</td>
+          </tr>
+          <tr>
+            <td>Python, Başlangıç Seviyesi</td>
+          </tr>
+          <tr>
+            <td>Web Programlama Dilleri (html,php,css,javascript), Orta Seviye</td>
+          </tr>
+          <tr>
+            <td>Siber Güvenlik, Başlangış Seviyesi</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr class="ayraç">
+      <table class="table beyaz">
+        <thead class="table-dark">
+          <tr>
+            <th>Eğitim Durumu</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tepe İlkokulu</td>
+          </tr>
+          <tr>
+            <td>Güvercintepe Ortaokulu</td>
+          </tr>
+          <tr>
+            <td>Yücel Boru Fen Lisesi</td>
+          </tr>
+          <tr>
+            <td>Sakarya Üniversitesi, Bilgisayar Mühendisliği, 1. Sınıf</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr class="ayraç">
+      <table class="table beyaz">
+        <thead class="table-dark">
+          <tr>
+            <th>Yabancı Diller</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>İngilizce, Orta-Üst Seviye</td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <hr class="ayraç"><i class="fas fa-ice-cream igri"></i>
+    </div>
+  </section>
+  <!-- özgeçmişim bitiş-->
 
-      <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
-    <footer class="py-4 bg-dark text-white text-center">
-      Web-Teknolojileri-Projesi © Mehmet Arı 2021
-    </footer>
-  </body>
+  <footer class="py-4 bg-dark text-white text-center">
+    Web-Teknolojileri-Projesi © Mehmet Arı 2021
+  </footer>
+</body>
+
 </html>
